Fix Featured Post thumb stretching

--- a/assets/less/_theme.less
+++ b/assets/less/_theme.less
@@ -185,15 +185,6 @@
 .post--featured{
   .post__thumb{
     min-height: @post-thumb-featured-height;
-
-    img{
-      min-height: @post-thumb-featured-height;
-      width: auto;
-    }
-  }
-  .post__thumb-link{
-    min-height: @post-thumb-featured-height;
-    width: auto;
   }
 }
 .post--excerpt {
